Fix some obvious java:S6024 issues
Signed-off-by: Olivier Perrin <olivier.perrin@rte-france.com>